A really big commit to add event listing

--- a/app/index.html
+++ b/app/index.html
@@ -53,6 +53,7 @@
   <script src="scripts/collections/calendars.js"></script>
   <script src="scripts/views/chrome.js"></script>
   <script src="scripts/views/roomArc.js"></script>
+  <script src="scripts/views/eventsListView.js"></script>
   <!-- endbuild -->
 
   <script src="https://apis.google.com/js/client.js?onload=handleClientLoad"></script>
