--- a/app/index.html
+++ b/app/index.html
@@ -29,11 +29,11 @@
   <script src="bower_components/jquery/jquery.js"></script>
   <script src="bower_components/underscore/underscore.js"></script>
   <script src="bower_components/backbone/backbone.js"></script>
+  <script src="bower_components/backbone.marionette/lib/backbone.marionette.js"></script>
   <script src="bower_components/backbone-relational/backbone-relational.js"></script>
   <script src="bower_components/handlebars/handlebars.runtime.js"></script>
   <script src="bower_components/raphael/raphael.js"></script>
   <script src="bower_components/fastclick/lib/fastclick.js"></script>
-  <script src="bower_components/Sortable/Sortable.js"></script>
   <!-- endbuild -->
 
   <!-- build:js({.tmp,app}) scripts/main.js -->
@@ -52,6 +52,7 @@
   <script src="scripts/collections/calendars.js"></script>
   <script src="scripts/views/chrome.js"></script>
   <script src="scripts/views/roomArc.js"></script>
+  <script src="scripts/views/eventItemView.js"></script>
   <script src="scripts/views/eventsListView.js"></script>
   <!-- endbuild -->
 
