Adding a router, pages, marionette nested views

--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
 
   <button id="authorizeButton" style="display: none;">Auth me!</button>
   <div id="OcupadoApp"></div>
-  <div id="OcupadoChrome" style="display: none;"></div>
+  <div id="OcupadoChrome"></div>
 
 
   <!-- build:js scripts/vendor.js -->
@@ -40,6 +40,7 @@
   <script src="scripts/main.js"></script>
   <script src="scripts/lib/helpers.js"></script>
   <script src="scripts/lib/auth.js"></script>
+  <script src="scripts/routers/app.js"></script>
   <script src="scripts/templates.js"></script>
   <script src="scripts/models/event.js"></script>
   <script src="scripts/collections/events.js"></script>
@@ -47,6 +48,8 @@
   <script src="scripts/views/room.js"></script>
   <script src="scripts/collections/rooms.js"></script>
   <script src="scripts/views/rooms.js"></script>
+  <script src="scripts/views/calendarItemView.js"></script>
+  <script src="scripts/views/calendarListView.js"></script>
   <script src="scripts/views/CalendarSelectionModal.js"></script>
   <script src="scripts/models/calendar.js"></script>
   <script src="scripts/collections/calendars.js"></script>
