Adding booking, moving chrome to core

--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
 
   <button id="authorizeButton" style="display: none;">Auth me!</button>
   <div id="OcupadoApp"></div>
-  <div id="OcupadoChrome"></div>
+
 
 
   <!-- build:js scripts/vendor.js -->
@@ -53,8 +53,8 @@
   <script src="scripts/views/CalendarSelectionModal.js"></script>
   <script src="scripts/models/calendar.js"></script>
   <script src="scripts/collections/calendars.js"></script>
-  <script src="scripts/views/chrome.js"></script>
   <script src="scripts/views/roomArc.js"></script>
+  <script src="scripts/views/bookNowView.js"></script>
   <script src="scripts/views/eventItemView.js"></script>
   <script src="scripts/views/eventsListView.js"></script>
   <!-- endbuild -->
