--- a/app/index.html
+++ b/app/index.html
@@ -49,6 +49,7 @@
   <script src="scripts/collections/rooms.js"></script>
   <script src="scripts/views/rooms.js"></script>
   <script src="scripts/views/calendarItemView.js"></script>
+  <script src="scripts/views/calendarEmptyView.js"></script>
   <script src="scripts/views/calendarListView.js"></script>
   <script src="scripts/views/CalendarSelectionModal.js"></script>
   <script src="scripts/models/calendar.js"></script>
