--- a/app/index.html
+++ b/app/index.html
@@ -34,6 +34,7 @@
   <script src="bower_components/handlebars/handlebars.runtime.js"></script>
   <script src="bower_components/raphael/raphael.js"></script>
   <script src="bower_components/fastclick/lib/fastclick.js"></script>
+  <script src="bower_components/socket.io-client/socket.io.js"></script>
   <!-- endbuild -->
 
   <!-- build:js({.tmp,app}) scripts/main.js -->
@@ -58,6 +59,7 @@
   <script src="scripts/views/bookNowView.js"></script>
   <script src="scripts/views/eventItemView.js"></script>
   <script src="scripts/views/eventsListView.js"></script>
+  <script src="scripts/models/socket.js"></script>
   <!-- endbuild -->
 
   <script src="https://apis.google.com/js/client.js?onload=handleClientLoad"></script>
